Fix for CSS overlap

--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,13 @@
   background-color: #555;
 }
 
-.content {
+/* .content {
   padding: 0 18px;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #555;
-}
+} */
 
 @keyframes cardIn {
     from{
